# zloom

./: .gitignore  README.md  pyproject.toml  requirements.txt  zloom.py
config/: alert_projections.json  basic_projections.json  boom_creds.json  detailed_projections.json
src/zloom/: __init__.py  alert_count.py  auth.py  utils.py
src/zloom/filters/: __init__.py  all_filters.py  choose_filter.py  filters.py
src/zloom/lsst/: __init__.py  alert_count.py  filter_lsst_alerts.py
src/zloom/scanning/: Readme.md  __init__.py  nightly_scan.py  simple_scanning.py
src/zloom/ztf/: alert_count.py
