[project]
name = "zloom"
version = "0.1.0"
description = "ZLOOM - Python wrapper for exploring ZTF and LSST alerts through BOOM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[project.scripts]
zloom-scan-nightly = "zloom.scanning.nightly_scan:main"
zloom-nalerts-lsst = "zloom.lsst.alert_count:main"
zloom-nalerts-ztf = "zloom.ztf.alert_count:main"
zloom-nalerts = "zloom.alert_count:main"